fix css spacing

--- a/src/components/forumform.css
+++ b/src/components/forumform.css
@@ -6,6 +6,7 @@
 
   .form-group {
     margin-bottom: 20px;
+    justify-items: center;
   }
 
   .form-control {
